--- a/principal/templates/miscellaneous/traveller-menu.html
+++ b/principal/templates/miscellaneous/traveller-menu.html
@@ -41,10 +41,10 @@
 		<li>
 			<div class="navbar-login">
 				<div class="row">
-					<div class="col-lg-4 text-center">
-						<img class="avatar img-circle img-thumbnail" src="/{{ user.traveller.photo }}" alt="{{ user.traveller.first_name }}">
+					<div class="col-lg-4 col-xs-12 text-center">
+						<img class="avatar img-circle img-thumbnail img-profile-navbar" src="/{{ user.traveller.photo }}" alt="{{ user.traveller.first_name }}">
 					</div>
-					<div class="col-lg-8">
+					<div class="col-lg-8 col-xs-12  text-center">
 						<p class="text-left">
 							<strong>{{ user.traveller.first_name }}</strong>
 						</p>
@@ -60,10 +60,8 @@
 		<li>
 			<div class="navbar-login navbar-login-session">
 				<div class="row">
-					<div class="col-lg-12">
-						<p>
-							<a href="/logout" class="btn btn-danger btn-block">Logout</a>
-						</p>
+					<div class="col-lg-12 text-center">
+					   <a href="/logout" class="btn btn-danger btn-block">Logout</a>
 					</div>
 				</div>
 			</div>
