--- a/principal/templates/show_planning.html
+++ b/principal/templates/show_planning.html
@@ -99,8 +99,8 @@
                 </div>
                 <div class="modal-body row">
                     <div class="col-sm-10 col-sm-offset-1">
-                    	<div class="col-xs-12">
-                    	    <p>This is the venue that you're changing</p>
+                    	<div class="col-xs-12 text-center">
+                    	    <h3>Select the new venue</h3>
                             <img id="imageVenueToChange" src="{{venue.photo}}" class="img-responsive img-thumbnail img-venue" onerror="this.src='{% static "img/no-image.png" %}'">
                             <h4 id="nameCurrentVenue">Name</h4>
                         </div>
@@ -139,8 +139,8 @@
                 </div>
                 <div class="modal-body row">
                     <div class="col-sm-10 col-sm-offset-1">
-                    	<div class="col-xs-12">
-                    	    <p>This is the venue that you're changing</p>
+                    	<div class="col-xs-12 text-center">
+                    	    <h3>Select the new venue</h3>
                             <img id="imageFoodToChange" src="{{venue.photo}}" class="img-responsive img-thumbnail img-venue" onerror="this.src='{% static "img/no-image.png" %}'">
                             <h4 id="nameCurrentFood">Name</h4>
                         </div>
