- Movido el script que controla el padding al footer para que esté en todas las páginas. - Añadido un script para que cuando esté en collapse (menú contraido) y haga clic en Search, se contraiga y se pueda ver.

--- a/principal/templates/miscellaneous/footer.html
+++ b/principal/templates/miscellaneous/footer.html
@@ -16,3 +16,18 @@
 		</div>
 	</div>
 </footer>
+
+<script type="text/javascript">
+	$('#searchCollapse').on('hide.bs.collapse', function(e) {
+		e.preventDefault();
+		$('#content').addClass("padding-control");
+		$('#searchCollapse').removeClass('in');
+	});
+
+	$('#searchCollapse').on('show.bs.collapse', function(e) {
+		e.preventDefault();
+		$('#content').removeClass("padding-control");
+		$('#searchCollapse').addClass('in');
+		$('.navbar-collapse').collapse('hide');
+	});
+</script>
