--- a/principal/templates/miscellaneous/menu.html
+++ b/principal/templates/miscellaneous/menu.html
@@ -1,5 +1,5 @@
 {% load i18n %}
-<div class="navbar navbar-default navbar-bt-gen navbar-fixed-top" role="navigation">
+<div class="navbar navbar-default navbar-bt-gen navbar-fixed-top" role="navigation" id="menu-bar">
     <div class="container bg-menu-collapse">
         <div class="navbar-header">
             <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
