--- a/principal/templates/miscellaneous/traveller-menu.html
+++ b/principal/templates/miscellaneous/traveller-menu.html
@@ -41,10 +41,10 @@
 		<li>
 			<div class="navbar-login">
 				<div class="row">
-					<div class="col-lg-4 col-xs-12 text-center">
+					<div class="col-xs-4 text-center">
 						<img class="avatar img-circle img-thumbnail img-profile-navbar" src="/{{ user.traveller.photo }}" alt="{{ user.traveller.first_name }}">
 					</div>
-					<div class="col-lg-8 col-xs-12  text-center">
+					<div class="col-xs-8 text-center">
 						<p class="text-left">
 							<strong>{{ user.traveller.first_name }}</strong>
 						</p>
@@ -60,8 +60,8 @@
 		<li>
 			<div class="navbar-login navbar-login-session">
 				<div class="row">
-					<div class="col-lg-12 text-center">
-					   <a href="/logout" class="btn btn-danger btn-block">Logout</a>
+					<div class="col-xs-12 text-center">
+					   <button class="btn btn-danger btn-block" onclick="window.location.href='/logout'">Logout</button>
 					</div>
 				</div>
 			</div>
