--- a/principal/templates/index.html
+++ b/principal/templates/index.html
@@ -158,7 +158,7 @@
             $.cookieBar({
             	bottom: true,
             	fixed: true,
-                policyURL: 'cookies_policies',
+                policyURL: 'cookies_policy',
                 policyText: 'Cookies policy',
                 policyButton : true,
                 declineButton: true
