--- a/principal/templates/privacy_terms.html
+++ b/principal/templates/privacy_terms.html
@@ -6,135 +6,63 @@
     <div class="row">
         <div class="col-lg-12 text-justify">
             {% blocktrans trimmed %}
-            <h2>T&eacute;rminos y condiciones</h2>
+            <h2>Terms of use</h2>
+            <p>According to the provisions of Law 15 /1999 of December
+				13, Protection of Personal Data (hereinafter LOPD), BrainTravel Co.,
+				Inc. NIF 12345678A informs you that the data collected in this web
+				site will be incorporated into an automated file registered with the
+				data Protection Agency and belong to BrainTravel Co., Inc., with the
+				purpose of meeting the requests you sue. Under Article 5 of the law,
+				you will be duly informed in detail on our forms of the purpose and
+				use of the information provided.</p>
+            
+            <h3>Information: Data</h3>
+            <p>The data provided by you in the documents of the website
+				will be processed automatically and will become part of the file
+				property of BrainTravel Co., Inc., registered in the Data Protection
+				Agency. These data may be used for internal management of business
+				contacts requesting information or those with whom a business
+				relationship is maintained.</p>
             <p>
-                De acuerdo con las disposiciones de la Ley 15/1999, de 13 de Diciembre, de Protecci&oacute;n de
-
-                Datos de Car&aacute;cter Personal, (en adelante, LOPD), BrainTravel Co., Inc. NIF 12345678A le
-
-                informa que los datos recogidos en este sitio web ser&aacute;n incorporados a un fichero
-
-                automatizado inscrito ante la Agencia de Protecci&oacute;n de Datos y pertenecen a BrainTravel Co.,
-
-                Inc., teniendo como finalidad la de atender las peticiones que usted demande. En virtud del
-
-                art&iacute;culo 5 de la citada ley, usted ser&aacute; debidamente informado con todo detalle en nuestros
-
-                formularios de la finalidad y uso de los datos que proporcione.
+               Except in areas where otherwise noted, responses to questions about personal data are voluntary. The victim commits to the accuracy of the data supplied.
             </p>
-            <h3>Informaci&oacute;n: Alta de Datos</h3>
-            <p>
-                Los datos facilitados por Usted en los documentos del sitio web, ser&aacute;n objeto de tratamiento
-
-                automatizado y pasar&aacute;n a formar parte del fichero propiedad de BrainTravel Co., Inc.,  inscrito
-
-                en la Agencia de Protecci&oacute;n de Datos. Estos datos podr&aacute;n ser utilizados para la gesti&oacute;n interna
-
-                de los contactos comerciales que solicitan informaci&oacute;n o con aquellos con los que se mantiene
-
-                una relaci&oacute;n comercial.
-            </p>
-            <p>
-                Salvo en los campos que se indique lo contrario, las respuestas a las preguntas sobre sus datos
-
-                personales son voluntarias. El afectado se compromete a la veracidad de los datos que
-
-                suministra.
-            </p>
-            <p>
-                De conformidad con el art&iacute;culo 5 de la Ley 15/1999, de 13 de diciembre de Protecci&oacute;n de Datos
-
-                de Car&aacute;cter Personal, Ud. tiene derecho a acceder a esta informaci&oacute;n, a rectificarla si los datos
-
-                son err&oacute;neos y darse de baja del fichero mediante una solicitud escrita a: Atenci&oacute;n LOPD,
-
-                BrainTravel Co., Inc., C/ Madrid, 1 - 41200 Alcal&aacute; del R&iacute;o (Sevilla) Espa&ntilde;a, o bien, enviando
-
-                dicha solicitud a la direcci&oacute;n de correo electr&oacute;nico <a href="mailto:clientes.braintravel@gmail.com">clientes.braintravel@gmail.com</a> para ser
-
-                atendido y guiado para cumplimentar el proceso, cumpli&eacute;ndose as&iacute; la notificaci&oacute;n prevista en
-
-                el art&iacute;culo 5.4 de la misma.
-            </p>
-            <h3>Condiciones del servicio</h3>
+            <p>In accordance with Article 5 of Law 15/1999 of 13
+				December on Protection of Personal Data, you are entitled to access
+				this information , rectify it if the data is wrong and unsubscribe
+				by a file written request to: Attention LOPD , BrainTravel Co. ,
+				Inc. , C / Madrid, 1-41200 Acalá del Río (Sevilla) Spain or by
+				sending the request to the e-mail address to be
+				clientes.braintravel@gmail.com assisted and guided to complete the
+				process , fulfilling the notification provided for in Article 5.4 of
+				the same.</p>
+            
+            <h3>Terms of service</h3>
             <ol>
                 <li>
-                    El usuario o visitante de la p&aacute;gina web <a href="http://www.braintravel.com">http://www.braintravel.com</a> tiene la obligaci&oacute;n
-                    leer las condiciones de prestaci&oacute;n del servicio que se detallan en este texto, de manera que
-                    asume estas como v&aacute;lidas en la prestaci&oacute;n del servicio.
+                    The user or visitor of the website http://www.traintravel.com is required to read the conditions of the service as detailed in the text, so that it assumes these as valid in the service.
                 </li>
                 <li>
-                    Objetivos de la p&aacute;gina web http://www.braintravel.com: La p&aacute;gina web es
-                    econ&oacute;micamente a trav&eacute;s de los pagos que se realizan a trav&eacute;s de la pasarela de pago PayPal.
+                    Objectives http://www.traintravel.com website: The website is economically exploited through payments made through PayPal payment gateway.
                 </li>
-                <li>
-                    Condiciones de uso del contenido y servicios prestados en esta p&aacute;gina web:
+                                
+                <li>Conditions of use of the content and services provided on this site:
+	                <ul>
+	                   <li>No reproduction is permitted of content (any type) http://www.traintravel.com published without the express consent of the author of that web. In this case we talk about text, graphics, source code, and any other content that is served from this website.</li>
+	                   <li>On this website there may be third party content. In either case, as is always the intention to respect the rights of copyright and copyright law, if there is any problem regarding minimum any material posted on this website are requested to be contacted via email: clientes.braintravel@gmail.com and the content will be removed (after being checked) with the maximum possible speed, as first intention is respect for copyright and the work of others.</li>
+	                   <li>The author of this site is not responsible for the misuse of the content posted on this site (http://www.traintravel.com).</li>
+	                   <li>The website http://www.traintravel.com is funded and operated through economically exposed to the same advertising, there being no other kind of economic exploitation.</li>
+	                   <li>The author of http://www.traintravel.com is not responsible for the malfunction of the system or service provided on this website, but always seeks and strives to offer the best service.</li>
+	                   <li>The author of the website http://www.traintravel.com use it as an advertising medium and is not responsible for the bad service or problems arising from the advertised services so that advertising and services they refer to this post are the sole responsibility of the advertiser.</li>
+	                   <li>On this website (http://www.traintravel.com) there are NO illegal content (child pornography, justifying terrorism or any other illegal content).</li>
+	                </ul>
                 </li>
-                    <ul>
-                        <li>
-                            No est&aacute; permitida la reproducci&oacute;n de los contenidos (de cualquier tipo) publicados
-
-                            en <a href="http://www.braintravel.com">http://www.braintravel.com</a> sin el consentimiento expreso del autor de dicha web. En este
-
-                            caso hablamos de textos, gr&aacute;ficos, c&oacute;digo fuente, y cualquier otro contenido que sea servido
-
-                            desde esta p&aacute;gina web.
-                        </li>
-                        <li>
-                            En esta p&aacute;gina web pueden existir contenidos de terceros. En cualquiera de los casos, y
-
-                            como es intenci&oacute;n siempre el respetar los derechos de autor y las leyes del copyright, si
-
-                            hubiera cualquier m&iacute;nimo problema respecto a cualquier material publicado en esta web, se
-
-                            ruega que se pongan en contacto a trav&eacute;s del email: <a href="mailto:clientes.braintravel@gmail.com">clientes.braintravel@gmail.com</a> y el
-
-                            contenido ser&aacute; retirado (tras ser comprobado) con la m&aacute;xima celeridad posible, ya que es
-
-                            intenci&oacute;n primera el respeto por los derechos de autor y el trabajo ajeno.
-                        </li>
-                        <li>
-                            El autor de esta web no se hace responsable del mal uso que se haga del contenido
-
-                            expuesto en esta p&aacute;gina web (<a href="http://www.braintravel.com">http://www.braintravel.com</a>).
-                        </li>
-                        <li>
-                            La p&aacute;gina web <a href="http://www.braintravel.com">http://www.braintravel.com</a> es financiada y explotada
-
-                            trav&eacute;s de la publicidad expuesta en la misma, no existiendo ning&uacute;n otro tipo de explotaci&oacute;n
-
-                            econ&oacute;mica.
-                        </li>
-                        <li>
-                          El autor de <a href="http://www.braintravel.com">http://www.braintravel.com</a> no se hace responsable del
-
-                          del sistema o servicio prestado en esta p&aacute;gina web, aunque siempre se pretende y trabaja para
-
-                          ofrecer el mejor servicio.
-                        </li>
-                        <li>
-                            El autor de la p&aacute;gina web <a href="http://www.braintravel.com">http://www.braintravel.com</a> utiliza la misma
-
-                            publicitario y no se hace responsable del mal servicio o problemas surgidos por los servicios
-
-                            anunciados, de forma que la publicidad y los servicios posteriores que esta remita son
-
-                            responsabilidad &uacute;nica del anunciante.
-                        </li>
-                        <li>
-                            En esta p&aacute;gina web (<a href="http://www.braintravel.com">http://www.braintravel.com</a>) NO existen contenidos ilegales
-
-                            (pornograf&iacute;a infantil, apolog&iacute;a del terrorismo, o cualquier otro tipo de contenido ilegal).
-                        </li>
-                    </ul>
-            </ol>
+				
+			</ol>
             <p>
-                Para cualquier problema al respecto, deben ponerse en contacto con la direcci&oacute;n de correo
-
-                electr&oacute;nico <a href="mailto:clientes.braintravel@gmail.com">clientes.braintravel@gmail.com</a>o tel&eacute;fonos:
+               For any problem with it, they should contact the email (clientes.braintravel@gmail.com) or phone:
             </p>
             <p>
-                SEVILLA Telf.: +34 955555555 Fax:+34
+                SEVILLA Tel: +34 955555555 
             </p>
             {% endblocktrans %}
         </div>
