--- a/principal/templates/buy_coins.html
+++ b/principal/templates/buy_coins.html
@@ -4,8 +4,9 @@
     {% load i18n %}
 <div class="container">
 <div class="text-center">
-    <h1>{% trans "Paquetes de monedas" %}</h1>
+    <h1>{% trans "Coin packs" %}</h1>
     <p>{% trans "Con nuestras monedas virtuales podras organizar tus viajes. Aprovecha nuestros packs!" %}</p>
+    <p>{% trans "With our virtual coins you can plan your trips. Buy a pack and start using the automatic planner!" %}</p>
 </div>
     <div class="db-padding-btm db-attached">
         <div class="col-xs-12 col-sm-4 col-md-4 col-lg-4">
