--- a/principal/templates/public_trip_details.html
+++ b/principal/templates/public_trip_details.html
@@ -1,5 +1,5 @@
 {% extends 'base.html' %}
-{% block title %} Details {% endblock %}
+{% block title %} {% trans "Details" %} {% endblock %}
 {% block content %}
     {% load i18n %}
 <div class="container">
