--- a/principal/templates/stats.html
+++ b/principal/templates/stats.html
@@ -1,25 +1,13 @@
-<<<<<<< HEAD
-{% extends 'base.html' %}
-{% block title %} Statistics {% endblock %}
+{% extends 'base.html' %} 
+{% load i18n %} 
+{% block title %} {% trans "Statistics" %} {% endblock %} 
+
 {% block content %}
 <div class="container">
-    <div class="row">
-        <div class="col-lg-6">
-            <div class="well">
-                <div class="row">
-                  <div class="col-xs-6 col-md-3">
-                    {% for traveller in travellers_travelling %}
-                    <a href="#" class="thumbnail">
-                      <img src="/{{traveller.photo}}">
-                    </a>
-                    <div class="caption">
-                        <h3>{{ traveller.first_name }} {{ traveller.last_name }}</h3>
-                    </div>
-                  </div>
-                </div>
-                {% endfor %}
-            </div>
-        </div>
-    </div>
+	<div class="text-center">
+		<h1>{% trans "Statistics panel" %}</h1>
+		<p>{% trans "There are some interesting statistics about trips and venues." %}</p>
+	</div>
 </div>
+
 {% endblock %}
