--- a/principal/templates/public_trip_details.html
+++ b/principal/templates/public_trip_details.html
@@ -184,8 +184,8 @@
     </div>
     <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
         <div class="modal-dialog">
-            <div class="modal-content">
-                <div class="modal-header">
+            <div class="modal-content modal-bt">
+                <div class="modal-header text-center">
                     <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
                     <h4 class="modal-title" id="myModalLabel">Rate this trip</h4>
                 </div>
@@ -194,7 +194,7 @@
                         {% csrf_token %}
                         <div class="form-group">
                             <p>{% trans "Please choose a number between 0 and 10:" %}</p>
-                            <input type="number" name="rate-value" min="0" max="10" required/>
+                            <input type="number" name="rate-value" min="0" max="10" required class="form-control"/>
                             <p>{% trans "Please, write a fancy description:" %}</p>
                             <textarea id="text-comment" class="form-control input-block-level" name="text-rate-description" rows="3" required="required" maxlength="255" style="resize: none;"></textarea>
                         </div>
