--- a/principal/templates/show_planning.html
+++ b/principal/templates/show_planning.html
@@ -93,7 +93,7 @@
     <div class="modal fade" id="changeVenueModal" tabindex="-1" role="dialog" aria-labelledby="VenueModal" aria-hidden="true">
         <div class="modal-dialog">
             <div class="modal-content modal-bt">
-                <div class="modal-header">
+                <div class="modal-header text-center">
                     <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
                     <h4 class="modal-title" id="myModalLabel">Change venue</h4>
                 </div>
@@ -133,7 +133,7 @@
     <div class="modal fade" id="changeFoodModal" tabindex="-1" role="dialog" aria-labelledby="FoodModal" aria-hidden="true">
         <div class="modal-dialog">
             <div class="modal-content modal-bt">
-                <div class="modal-header">
+                <div class="modal-header text-center">
                     <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
                     <h4 class="modal-title" id="foodModal">Current Venue</h4>
                 </div>
