--- a/principal/templates/signin.html
+++ b/principal/templates/signin.html
@@ -57,7 +57,7 @@
     <div class="modal fade registrationForm" id="registerModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
         <div class="modal-dialog modal-sm">
             <div class="modal-content modal-bt">
-                <div class="modal-header">
+                <div class="modal-header text-center">
                     <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
                     <h4 class="modal-title" id="myModalLabel">Sign Up</h4>
                 </div>
