--- a/principal/templates/venue_details.html
+++ b/principal/templates/venue_details.html
@@ -6,9 +6,7 @@
             <div class="media">
                 <div class="row">
                     <div class="col-md-2 col-sm-3 col-lg-2 col-xs-12 text-center">
-                        <a href="#">
-                            <img class="img-rounded" style="width: 150px;" src="{{venue.photo}}">
-                        </a>
+                        <img class="img-rounded" style="width: 150px;" src="{{venue.photo}}">
                         <h4 class="media-heading" style="margin-top: 14px;">{{venue.name}}</h4>
                         <a style="margin-top: 10px;" type="button" class="btn btn-primary btn-md" data-toggle="modal" data-target="#myModal">{% trans "Give feedback" %}</a>
                     </div>
@@ -17,7 +15,7 @@
                             <h4>Useful tips</h4>
                                 {% for tip in tips %}
                                 <div class="row">
-	                                <div class="col-sm-1">
+	                                <div class="col-sm-1 hidden-xs">
 	                                    <img class="img-responsive img-circle user-photo" src="/{{ tip.traveller.photo }}">
 	                                </div><!-- /col-sm-1 -->
 	
@@ -31,7 +29,7 @@
 	                                        </div><!-- /panel-body -->
                                             {% if user.id != tip.traveller.id %}
                                             <div class="panel-footer">
-                                                <a  type="button" class="btn btn-primary btn-success btn-sm" href="/venue_details/value_tip/{{ tip.venues.id }}/{{ tip.id }}">Useful</a>
+                                                <a  type="button" class="btn btn-primary btn-success btn-sm" href="/venue_details/value_tip/{{ tip.venues.id }}/{{ tip.id }}">This is useful</a>
                                             </div>
                                             {% endif %}
 	                                    </div><!-- /panel panel-default -->
@@ -48,8 +46,8 @@
         </div>
         <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
               <div class="modal-dialog">
-                <div class="modal-content">
-                  <div class="modal-header">
+                <div class="modal-content modal-bt">
+                  <div class="modal-header text-center">
                     <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
                     <h4 class="modal-title" id="myModalLabel">Give us some feedback!</h4>
                   </div>
@@ -57,7 +55,7 @@
                     <form class="form" method="post" action="/venue_details/rate/" id="form-rate-id">
                         {% csrf_token %}
                         <div class="form-group">
-                            <p>{% trans "By giving feedback you enhance our algorithm. The more feedback it gets, the more accurate it becomes. We give you some coins as gift as well :)" %}</p>
+                            <p>{% trans "By giving feedback you enhance our algorithm. The more feedback it gets, the more accurate it becomes. If you enter something in the description and users like it, we give you some free coins (2 coins per 5 likes)" %}</p>
                             <hr>
                             {% trans "<h4>Lead time: <small>How much time you spent waiting to buy the tickets, on the queue...</small></h4>" %}
                             <input id="lead-time" type="number" name="lead-time-value" min="0" required/><span> min.</span>
