Archivo que faltaba

--- a/principal/templates/miscellaneous/traveller-menu.html
+++ b/principal/templates/miscellaneous/traveller-menu.html
@@ -28,7 +28,7 @@
         <li><a href="/trip/mylist"><i class="fa fa-plane"></i> {% trans "My trips" %}</a></li>
         <li><a href="/trip/planned_trips"><i class="fa fa-list-ol"></i> {% trans "My planned trips" %}</a></li>
         <li><a href="/trip/draft"><i class="fa fa-archive"></i> {% trans "Drafts" %}</a></li>
-        <li><a href="/statistics"><i class="fa fa-pie-chart"></i> {% trans "Statisticas" %}</a></li>
+        <li><a href="/statistics"><i class="fa fa-pie-chart"></i> {% trans "Statistics" %}</a></li>
     </ul>
 </li>
 
